--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
+    "script-ext-html-webpack-plugin": "^1.3.4",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.3",
